--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%APIKEY%&libraries=LIBRARY"></script> -->
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -14,9 +13,7 @@
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=c771f0bb2a8c04676ad7aef8e4bc39e6&libraries=services,clusterer,drawing"></script>
-    <title>사랑해요 신한은행</title>
-    <!-- <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=APIKEY&libraries=LIBRARY"></script> -->
-    <!-- <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=APIKEY&libraries=services"></script> -->
+    <title>ZZang</title>
   </head>
   <body>
 
